--- a/DScaler5/Filters/Filter_Lib/Filter_Lib.vcproj
+++ b/DScaler5/Filters/Filter_Lib/Filter_Lib.vcproj
@@ -363,6 +363,9 @@
 			Name="Header Files"
 			Filter="h;hpp;hxx;hm;inl">
 			<File
+				RelativePath="..\..\Common\CPUID.h">
+			</File>
+			<File
 				RelativePath="DSBaseFilter.h">
 			</File>
 			<File
@@ -384,10 +387,19 @@
 				RelativePath="EnumPins.h">
 			</File>
 			<File
+				RelativePath="..\..\Common\GenDMOProp.h">
+			</File>
+			<File
 				RelativePath="InputMemAlloc.h">
 			</File>
 			<File
 				RelativePath="MediaBufferWrapper.h">
+			</File>
+			<File
+				RelativePath="..\..\Common\Params.h">
+			</File>
+			<File
+				RelativePath="..\..\Common\ProtectCode.h">
 			</File>
 			<File
 				RelativePath="StdAfx.h">
