--- a/DScaler/DScaler/VersionRes.rc
+++ b/DScaler/DScaler/VersionRes.rc
@@ -24,10 +24,10 @@ BEGIN
         BEGIN
             VALUE "Comments", "John Adcock\0"
             VALUE "CompanyName", "DScaler Team\0"
-            VALUE "FileDescription", "DScaler English (US) Resources\0"
+            VALUE "FileDescription", "DScaler Exe\0"
             VALUE "FileVersion", VERSTRING_ZT
             VALUE "InternalName", "DScaler\0"
-            VALUE "LegalCopyright", "Copyright © 2003\0"
+            VALUE "LegalCopyright", "Copyright © 2004\0"
             VALUE "LegalTrademarks", "This Program is covered by the term of the GNU GPL\0"
             VALUE "OriginalFilename", "DScaler.exe\0"
             VALUE "PrivateBuild", "\0"
