Added  restore defaults button

--- a/DScaler5/GenDMOProp/GenDMOProp.rc
+++ b/DScaler5/GenDMOProp/GenDMOProp.rc
@@ -146,7 +146,8 @@ BEGIN
     COMBOBOX        IDC_COMBO,100,7,141,54,CBS_DROPDOWN | WS_VSCROLL | 
                     WS_TABSTOP
     LTEXT           "Static",IDC_UNITS,128,23,98,11
-    PUSHBUTTON      "Save As Defaults",IDC_SAVEDEFAULTS,162,89,105,11
+    PUSHBUTTON      "Save Settings To Registry",IDC_SAVEDEFAULTS,161,83,105, 11
+    PUSHBUTTON      "Reset to Defaults",IDC_RESETDEFAULTS,161,95,105,11
 END
 
 IDD_LICENSEPROPPAGE DIALOG  0, 0, 271, 105
