--- a/DScaler5/GenDMOProp/GenDMOProp.rc
+++ b/DScaler5/GenDMOProp/GenDMOProp.rc
@@ -130,9 +130,9 @@ IDR_LICENSEPROPPAGE     REGISTRY                "LicensePropPage.rgs"
 // Dialog
 //
 
-IDD_GENDMOPROPPAGE DIALOG  0, 0, 271, 105
+IDD_GENDMOPROPPAGE DIALOGEX 0, 0, 271, 105
 STYLE DS_SETFONT | WS_CHILD
-FONT 8, "MS Sans Serif"
+FONT 8, "MS Sans Serif", 0, 0, 0x0
 BEGIN
     LISTBOX         IDC_PARAMETERLIST,1,1,84,104,LBS_NOINTEGRALHEIGHT | 
                     WS_VSCROLL | WS_HSCROLL | WS_TABSTOP
@@ -146,8 +146,12 @@ BEGIN
     COMBOBOX        IDC_COMBO,100,7,141,54,CBS_DROPDOWN | WS_VSCROLL | 
                     WS_TABSTOP
     LTEXT           "Static",IDC_UNITS,128,23,98,11
-    PUSHBUTTON      "Save Settings To Registry",IDC_SAVEDEFAULTS,161,83,105, 11
-    PUSHBUTTON      "Reset to Defaults",IDC_RESETDEFAULTS,161,95,105,11
+    PUSHBUTTON      "Save Settings To Registry",IDC_SAVEDEFAULTS,161,83,105,
+                    11
+    PUSHBUTTON      "Reset to Neutral Values",IDC_RESETDEFAULTS,161,95,105,
+                    11
+    PUSHBUTTON      "Load Settings From Registry",IDC_LOADDEFAULTS,161,71,
+                    105,11
 END
 
 IDD_LICENSEPROPPAGE DIALOG  0, 0, 271, 105
