Reinstated comments from the old card list.

--- a/DScaler/Release/SAA713xCards.ini
+++ b/DScaler/Release/SAA713xCards.ini
@@ -1,4 +1,4 @@
-; $Id: SAA713xCards.ini,v 1.2 2004-11-19 23:03:06 atnak Exp $
+; $Id: SAA713xCards.ini,v 1.3 2004-11-19 23:28:09 atnak Exp $
 ;
 ; SAA713x card list.
 ;
@@ -182,6 +182,8 @@ Input ( "Composite", composite )
 
 
 [LifeView FlyVideo3000 / Chronos Video Shuttle II]
+;Chronos Video Shuttle II (Based on FlyVideo 3000, Stereo)
+;Thanks "Velizar Velinov" <veli_velinov2001@ya...>
 DeviceID = 0x7134
 DefaultTuner = philips_pal
 AudioCrystal = 24hz
@@ -217,7 +219,9 @@ Final ()
 
 
 [LifeView FlyVideo2000 / Chronos Video Shuttle II]
+;Chronos Video Shuttle II (Based on FlyVideo 2000)
 DeviceID = 0x7130
+;Some variations of this card use differnet tuners.  E.g. Temic PAL
 DefaultTuner = lg_tapcnew_pal
 GPIOMask = 0x0018e700
 AutoDetectID = 0x01385168
@@ -251,6 +255,9 @@ Final ()
 
 
 [EMPRESS]
+;(has TS, i2srate=48000, has CCIR656 video out)
+;this comment was added when the card was originally taken
+;out of Gerd Knorr's saa7134 v4l2 drivers
 DeviceID = 0x7134
 DefaultTuner = philips_pal
 AudioCrystal = 32hz
@@ -313,6 +320,7 @@ Input ( "Composite over S-Video", composite )
 	AudioPin = line1
 
 Input ( "S-Video", svideo )
+	;(Might req mode 6)
 	VideoPin = 0
 	AudioPin = line1
 
@@ -396,6 +404,9 @@ Input ( "Radio", radio )
 
 
 [KWORLD KW-TV713XRF / KUROUTO SHIKOU]
+;KWORLD KW-TV713XRF (saa7130)
+;Thanks "b" <b@ki...>
+;this card probably needs GPIO changes but I don't know what they are
 DeviceID = 0x7130
 DefaultTuner = philips_ntsc
 
@@ -413,7 +424,10 @@ Input ( "S-Video", svideo )
 
 
 [Manli M-TV001]
+;Manli M-TV001 (saa7130)
+;Thanks "Bedo" Bedo@dscaler.forums
 DeviceID = 0x7130
+;Should be LG TPI8PSB12P PAL B/G
 DefaultTuner = lg_b11d_pal
 GPIOMask = 0x00006000
 
@@ -434,7 +448,11 @@ Input ( "S-Video", svideo )
 
 
 [PrimeTV 7133]
+;PrimeTV 7133 (saa7133)
+;Thanks "Shin'ya Yamaguchi" <yamaguchi@no...>
+;(This card uses the unsupported saa7133 chip.)
 DeviceID = 0x7133
+;Should be TCL2002NJ or Philips FI1286 (NTSC M-J)
 DefaultTuner = philips_fi1286_ntsc_m_j
 AudioCrystal = 24hz
 GPIOMask = 0x0018e700
@@ -460,6 +478,7 @@ Final ()
 
 
 [Terratec Cinergy 600 TV]
+;Thanks "Michel de Glace" <mglace@my...>
 DeviceID = 0x7134
 DefaultTuner = philips_pal
 AudioCrystal = 24hz
@@ -474,6 +493,7 @@ Input ( "Composite", composite )
 	AudioPin = line1
 
 Input ( "S-Video", svideo )
+	;(Might req mode 6)
 	VideoPin = 0
 	AudioPin = line1
 
@@ -486,6 +506,8 @@ Input ( "Radio", radio )
 
 
 [Medion TV-Tuner 7134 MK2/3]
+;Thanks "DavidbowiE" Guest@dscaler.forums
+;Thanks "Josef Schneider" <josef@ne...>
 DeviceID = 0x7134
 DefaultTuner = philips_fm1216me_mk3
 AudioCrystal = 32hz
@@ -500,6 +522,7 @@ Input ( "Composite", composite )
 	AudioPin = line1
 
 Input ( "S-Video", svideo )
+	;(Might req mode 6)
 	VideoPin = 0
 	AudioPin = line1
 
@@ -508,6 +531,8 @@ Input ( "Radio", radio )
 
 
 [Typhoon TV-Radio 90031]
+;Typhoon TV+Radio (Art.Nr. 90031)
+;Thanks "Tom Zoerner" <tomzo@ne...>
 DeviceID = 0x7134
 DefaultTuner = philips_pal
 AudioCrystal = 24hz
@@ -518,10 +543,12 @@ Input ( "Tuner", tuner )
 
 Input ( "Composite", composite )
 	VideoPin = 3
+	;MUTE, card has no audio in
 	AudioPin = line1
 
 Input ( "S-Video", svideo )
 	VideoPin = 0
+	;MUTE, card has no audio in
 	AudioPin = line1
 
 Input ( "Radio", radio )
@@ -529,6 +556,8 @@ Input ( "Radio", radio )
 
 
 [Manli M-TV002]
+;Manli M-TV002 (saa7130)
+;Thanks "Patrik Gloncak" <gloncak@ho...>
 DeviceID = 0x7130
 DefaultTuner = lg_b11d_pal
 
@@ -541,6 +570,7 @@ Input ( "Composite", composite )
 	AudioPin = line1
 
 Input ( "S-Video", svideo )
+	;(Might req mode 6)
 	VideoPin = 0
 	AudioPin = line1
 
@@ -549,6 +579,7 @@ Input ( "Radio", radio )
 
 
 [V-Gear MyTV SAP PK]
+;Thanks "Ken Chung" <kenchunghk2000@ya...>
 DeviceID = 0x7134
 DefaultTuner = philips_pal_i
 AudioCrystal = 32hz
@@ -571,6 +602,7 @@ Input ( "S-Video", svideo )
 
 
 [ASUS TV/FM]
+;Thanks "Wolfgang Scholz" <wolfgang.scholz@ka...>
 DeviceID = 0x7134
 DefaultTuner = philips_fm1216me_mk3
 AudioCrystal = 32hz
@@ -585,6 +617,7 @@ Input ( "Composite", composite )
 	AudioPin = line2
 
 Input ( "S-Video", svideo )
+	;(Might req mode 6)
 	VideoPin = 0
 	AudioPin = line2
 
@@ -593,6 +626,8 @@ Input ( "Radio", radio )
 
 
 [Aopen VA1000 Lite2]
+;Aopen VA1000 Lite2 (saa7130)
+;Thanks "stu" <ausstu@ho...>
 DeviceID = 0x7130
 DefaultTuner = lg_tapcnew_pal
 GPIOMask = 0x00000060
@@ -614,6 +649,10 @@ Input ( "S-Video", svideo )
 
 
 [ASK SELECT AS-VCV300/PCI]
+;(saa7130)
+;Thanks "Tetsuya Takahashi" <tetsu_64k@ze...>
+; - may have Videoport
+; - may have Transport Stream
 DeviceID = 0x7130
 AutoDetectID = 0x226e1048
 
@@ -627,6 +666,9 @@ Input ( "S-Video", svideo )
 
 
 [Medion MD-2819 PC-TV-radio card]
+;Thanks "Sanel.B" <vlasenica@ya...>
+;Thanks "Mc" <michel.heusinkveld2@wa...>
+;Thanks "Ing. Arno Pucher" <eolruin@ch...>
 DeviceID = 0x7134
 DefaultTuner = philips_fm1216me_mk3
 AudioCrystal = 32hz
@@ -644,6 +686,7 @@ Input ( "Composite", composite )
 	GPIOSet( 0x0006, 0x40007 )
 
 Input ( "S-Video", svideo )
+	;(Might req mode 6)
 	VideoPin = 0
 	AudioPin = line1
 	GPIOSet( 0x0006, 0x40007 )
@@ -657,6 +700,9 @@ Final ()
 
 
 [FlyVideo FlyView 3100 (no audio)]
+;FlyVideo FlyView 3100 (NTSC Version - United States)
+;Thanks "Ryan N. Datsko" <MysticWhiteDragon@ho...>
+;SAA7133 -- not supported
 DeviceID = 0x7133
 DefaultTuner = philips_ntsc
 GPIOMask = 0x0018e700
@@ -681,6 +727,10 @@ Final ()
 
 
 [Pinnacle PCTV Stereo]
+;Thanks "Fabio Maione" <maione@ma...>
+;Thanks "Dr. Uwe Zettl" <uwe.zettl@t...>
+;Thanks "Aristarco" <aristarco@ar...>
+;Card uses specialized TDA9887 chip configuration for audio
 DeviceID = 0x7134
 DefaultTuner = mt2050_pal
 AudioCrystal = 32hz
@@ -700,6 +750,7 @@ Input ( "S-Video", svideo )
 
 
 [AverMedia AverTV Studio 305]
+;Thanks "Oeoeeia Aieodee" <sid16@ya...>
 DeviceID = 0x7130
 DefaultTuner = philips_fm1216me_mk3
 GPIOMask = 0x00040007
@@ -716,6 +767,7 @@ Input ( "Composite", composite )
 	GPIOSet( 0x0006, 0x40007 )
 
 Input ( "S-Video", svideo )
+	;(Might req mode 6)
 	VideoPin = 0
 	AudioPin = line1
 	GPIOSet( 0x0006, 0x40007 )
@@ -730,6 +782,9 @@ Final ()
 
 
 [Elitegroup EZ-TV]
+;Thanks "Arturo Garcia" <argabulk@ho...>
+;+ Card "Grandmars PV951P4TF" is same except ID and Tuner chip(?)
+;  Thanks Kwok Kelvin <kelvin002@ho...>
 DeviceID = 0x7134
 DefaultTuner = philips_pal
 AudioCrystal = 32hz
@@ -752,6 +807,7 @@ Input ( "Radio", radio )
 
 
 [ST Lab PCI-TV7130]
+;Thanks "Aidan Gill" <schmookoo@ho...>
 DeviceID = 0x7130
 DefaultTuner = philips_pal
 GPIOMask = 0x00007000
@@ -768,6 +824,7 @@ Input ( "Composite", composite )
 	GPIOSet( 0x2000, 0x7000 )
 
 Input ( "S-Video", svideo )
+	;(Might req mode 6)
 	VideoPin = 0
 	AudioPin = line1
 	GPIOSet( 0x2000, 0x7000 )
@@ -778,6 +835,8 @@ Final ()
 
 
 [Lifeview FlyTV Platinum (no audio)]
+;Thanks "Chousw" <chousw@ms...>
+;SAA7133 -- not supported
 DeviceID = 0x7133
 DefaultTuner = philips_ntsc
 GPIOMask = 0x0018e700
@@ -794,6 +853,7 @@ Input ( "Composite", composite )
 	GPIOSet( 0x4000, 0xE000 )
 
 Input ( "S-Video", svideo )
+	;(Might req mode 6)
 	VideoPin = 0
 	AudioPin = line1
 	GPIOSet( 0x4000, 0xE000 )
@@ -803,6 +863,7 @@ Final ()
 
 
 [Compro VideoMate TV Gold Plus]
+;Thanks "Stephen McCormick" <sdmcc@pa...>
 DeviceID = 0x7134
 DefaultTuner = philips_pal
 AudioCrystal = 32hz
@@ -820,6 +881,7 @@ Input ( "Composite", composite )
 	GPIOSet( 0x8080, 0x1CE780 )
 
 Input ( "S-Video", svideo )
+	;(Might req mode 6)
 	VideoPin = 0
 	AudioPin = line1
 	GPIOSet( 0x8080, 0x1CE780 )
@@ -829,7 +891,10 @@ Final ()
 
 
 [Much TV Plus]
+;Much TV Plus IT005
+;Thanks "Norman Jonas" <normanjonas@ar...>
 DeviceID = 0x7134
+;Should be LG TPI8PSB02P PAL B/G
 DefaultTuner = lg_b11d_pal
 AudioCrystal = 32hz
 
@@ -842,6 +907,7 @@ Input ( "Composite", composite )
 	AudioPin = line1
 
 Input ( "S-Video", svideo )
+	;(Might req mode 6)
 	VideoPin = 0
 	AudioPin = line1
 
@@ -850,6 +916,8 @@ Input ( "Radio", radio )
 
 
 [Dazzle My TV]
+;Thanks <rockmong@ho...>
+;Looks like a FlyVideo 2000 clone (from Korea)
 DeviceID = 0x7130
 DefaultTuner = philips_ntsc
 GPIOMask = 0x0018e700
@@ -872,6 +940,9 @@ Input ( "S-Video", svideo )
 
 
 [Genius Video Wonder PRO III]
+;Thanks Michal Kueera <michalk@my...>
+;Looks like another FlyVideo 3000 clone (from Czech Republic)
+;Notice this card is a SAA7134 but the DAC appears not used
 DeviceID = 0x7134
 DefaultTuner = philips_pal
 AudioCrystal = 32hz
@@ -898,6 +969,9 @@ Final ()
 
 
 [V-Gear MyTV2 Radio]
+;V-Gear MyTV2 Radio (saa7130)
+;Thanks "Daniel Kutin" <daniel.kutin@os...>
+;Another card by vendor 0x0138.
 DeviceID = 0x7130
 DefaultTuner = philips_pal
 GPIOMask = 0x0000e000
@@ -914,6 +988,7 @@ Input ( "Composite", composite )
 	GPIOSet( 0x4000, 0xE000 )
 
 Input ( "S-Video", svideo )
+	;(Might req mode 6)
 	VideoPin = 0
 	AudioPin = line2
 	GPIOSet( 0x4000, 0xE000 )
