Added new UseTDA9887 settings.

--- a/DScaler/Release/SAA713xCards.ini
+++ b/DScaler/Release/SAA713xCards.ini
@@ -1,4 +1,4 @@
-; $Id: SAA713xCards.ini,v 1.3 2004-11-19 23:28:09 atnak Exp $
+; $Id: SAA713xCards.ini,v 1.4 2004-11-27 19:30:25 atnak Exp $
 ;
 ; SAA713x card list.
 ;
@@ -25,6 +25,10 @@
 ;     VideoPin = <video pin>
 ;     AudioPin = <audio pin = none, line1, line2, dac>
 ;     GPIOSet( <bits>, <mask>)
+;
+; UseTDA9887 ()
+;     SetModes ( <format1> ) = { <demodulation>, <outputport>, <takeoverpoint> }
+;     SetModes ( <format2> ) = { <demodulation>, <outputport>, <takeoverpoint> }
 ;
 ; (Note: The triangular brackets (< >) are not part of values.)
 ;
@@ -98,6 +102,17 @@
 ; configuration that should be applied to the card before DScaler exits.
 ; Although 'AudioPin' is listed, this setting it is not currently honoured.
 ; (Use RegSpy to find out a correct value.  See below.)
+;
+; 'UseTDA9887 ()':
+;   Formats: pal-bg, pal-i, pal-dk, pal-mn secam-l, secam-dk,
+;            ntsc-m, ntsc-jp, radio.
+;   Modes:
+;     Carrier = qss/intercarrier
+;     OutputPort1 = active/inactive
+;     OutputPort2 = active/inactive
+;     TakeoverPoint = max, min, default, 0x00 .. 0x1f
+;
+; Just 'UseTDA9887 = yes' is also accepted.
 ;
 ;
 ; ***** Using RegSpy to determine correct values: *****
@@ -332,6 +347,7 @@ Input ( "Radio", radio )
 DeviceID = 0x7134
 DefaultTuner = philips_fm1216me_mk3
 AudioCrystal = 24hz
+UseTDA9887 = yes
 
 Input ( "Tuner", tuner )
 	VideoPin = 1
@@ -377,6 +393,7 @@ DeviceID = 0x7134
 DefaultTuner = philips_fm1216me_mk3
 AudioCrystal = 24hz
 GPIOMask = 0x00006000
+UseTDA9887 = yes
 
 Input ( "Tuner", tuner )
 	VideoPin = 1
@@ -512,6 +529,7 @@ DeviceID = 0x7134
 DefaultTuner = philips_fm1216me_mk3
 AudioCrystal = 32hz
 AutoDetectID = 0x000316be
+UseTDA9887 = yes
 
 Input ( "Tuner", tuner )
 	VideoPin = 1
@@ -607,6 +625,7 @@ DeviceID = 0x7134
 DefaultTuner = philips_fm1216me_mk3
 AudioCrystal = 32hz
 AutoDetectID = 0x48421043
+UseTDA9887 = yes
 
 Input ( "Tuner", tuner )
 	VideoPin = 1
@@ -674,6 +693,7 @@ DefaultTuner = philips_fm1216me_mk3
 AudioCrystal = 32hz
 GPIOMask = 0x00040007
 AutoDetectID = 0xa70b1461
+UseTDA9887 = yes
 
 Input ( "Tuner", tuner )
 	VideoPin = 1
@@ -730,11 +750,13 @@ Final ()
 ;Thanks "Fabio Maione" <maione@ma...>
 ;Thanks "Dr. Uwe Zettl" <uwe.zettl@t...>
 ;Thanks "Aristarco" <aristarco@ar...>
+;Thanks "Graham Jest" <GrahamJest@ri...>
 ;Card uses specialized TDA9887 chip configuration for audio
 DeviceID = 0x7134
 DefaultTuner = mt2050_pal
 AudioCrystal = 32hz
 AutoDetectID = 0x002b11bd
+UseTDA9887 = yes
 
 Input ( "Tuner", tuner )
 	VideoPin = 3
@@ -755,6 +777,7 @@ DeviceID = 0x7130
 DefaultTuner = philips_fm1216me_mk3
 GPIOMask = 0x00040007
 AutoDetectID = 0x21151461
+UseTDA9887 = yes
 
 Input ( "Tuner", tuner )
 	VideoPin = 1
